<resources>
    <string name="app_name">Fun-O-Public</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_android_tab_layout">AndroidTabLayoutActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_fragment_navigation_main">FragmentNavigationMain</string>
    <string name="events">Events</string>
    <string name="signin">Sign In</string>
    <string name="contact_us">Contact Us</string>
    <string name="login">Login</string>
    <string name="event_type">"Event Type"</string>
    <string name="more">More</string>
    <string name="user_name">User Name</string>
    <string name="my_chats">My Chats</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="home_warming">Home Warming</string>
    <string name="engagement">Engagement</string>
    <string name="graduation">Graduation</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="phone_number">Phone Number</string>
    <string name="title_activity_set_event_params">SetEventParams</string>

    <string-array name="spinner_list">
        <item>Self</item>
        <item>Organizer</item>
    </string-array>
</resources>
