<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MasterUserNullFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/nav_header"
            android:layout_width="match_parent"
            android:layout_height="176dp"
            android:background="@color/colorPrimaryDark_gray"
            android:padding="16dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/appLogo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@id/appLogo"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/colorAccent"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:paddingStart="20dp"
                android:text="@string/user_name"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/events"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <ImageView
                    android:id="@+id/events_ic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_event"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="35dp"/>
                <TextView
                    android:id="@+id/events_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Base.TextAppearance.AppCompat.Medium"
                    android:text="@string/events" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/my_chats"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center_vertical"
                android:layout_below="@id/events"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/my_chats_ic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_message"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="35dp"/>

                <TextView
                    android:id="@+id/my_chats_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Base.TextAppearance.AppCompat.Medium"
                    android:text="@string/my_chats" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/edit_profile"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center_vertical"
                android:layout_below="@id/my_chats"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/edit_profile_ic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_account"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="35dp"/>

                <TextView
                    android:id="@+id/edit_profile_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Base.TextAppearance.AppCompat.Medium"
                    android:text="@string/edit_profile" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/contact_us"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center_vertical"
                android:layout_below="@id/edit_profile"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/contact_us_ic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_contact_us"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="35dp"/>

                <TextView
                    android:id="@+id/contact_us_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Base.TextAppearance.AppCompat.Medium"
                    android:text="@string/contact_us" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/more"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center_vertical"
                android:layout_below="@id/contact_us"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/more_ic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_more"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="35dp"/>

                <TextView
                    android:id="@+id/more_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Base.TextAppearance.AppCompat.Medium"
                    android:text="@string/more" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</FrameLayout>