<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MasterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/nav_header"
            android:layout_width="match_parent"
            android:layout_height="176dp"
            android:background="@color/colorPrimaryDark_gray"
            android:gravity="center"
            android:padding="16dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/appLogo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@mipmap/ic_launcher" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/events"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <ImageView
                    android:id="@+id/events_ic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_event"
                    android:layout_marginTop="1dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="35dp"/>
                <TextView
                    android:id="@+id/events_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:textSize="15sp"
                    android:text="@string/events" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/sigin_in"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center_vertical"
                android:layout_below="@id/events"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/sigin_in_ic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_account"
                    android:layout_marginTop="1dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="35dp"/>

                <TextView
                    android:id="@+id/sigin_in_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:textSize="15sp"
                    android:text="@string/signin" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/contact_us"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center_vertical"
                android:layout_below="@id/sigin_in"

                android:layout_marginTop="5dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/contact_us_ic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_message"
                    android:layout_marginTop="1dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="35dp"/>

                <TextView
                    android:id="@+id/contact_us_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:textSize="15sp"
                    android:text="@string/contact_us" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/more"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center_vertical"
                android:layout_below="@id/contact_us"

                android:layout_marginTop="5dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/more_ic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_more"
                    android:layout_marginTop="1dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="35dp"/>

                <TextView
                    android:id="@+id/more_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:textSize="15sp"
                    android:text="@string/more" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</FrameLayout>