<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.AnonymousNavPanel">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/nav_header"
                android:layout_width="match_parent"
                android:layout_height="176dp"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:padding="16dp"
                android:theme="@style/ThemeOverlay.AppCompat.Dark">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/appLogo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@mipmap/ic_launcher" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:id="@+id/events"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    >

                    <ImageView
                        android:id="@+id/events_ic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="1dp"
                        android:layout_marginEnd="35dp"
                        android:src="@drawable/ic_event" />

                    <TextView
                        android:id="@+id/events_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:text="@string/events"
                        android:textSize="15sp"
                        android:textColor="@color/black"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/sigin"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_below="@id/events"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/sigin_in_ic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="1dp"
                        android:layout_marginEnd="35dp"
                        android:src="@drawable/ic_account" />

                    <TextView
                        android:id="@+id/sigin_in_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:text="@string/signin"
                        android:textSize="15sp"
                        android:textColor="@color/black"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/contact_us"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_below="@id/sigin"
                    android:layout_marginTop="5dp"

                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/contact_us_ic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="1dp"
                        android:layout_marginEnd="35dp"
                        android:src="@drawable/ic_message" />

                    <TextView
                        android:id="@+id/contact_us_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:text="@string/contact_us"
                        android:textSize="15sp"
                        android:textColor="@color/black"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/more"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_below="@id/contact_us"
                    android:layout_marginTop="5dp"

                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/more_ic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="1dp"
                        android:layout_marginEnd="35dp"
                        android:src="@drawable/ic_more" />

                    <TextView
                        android:id="@+id/more_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:text="@string/more"
                        android:textSize="15sp"
                        android:textColor="@color/black"/>
                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>

    </FrameLayout>
</ScrollView>